# personal-cli

./: README.md  pyproject.toml
personalcli/: main.py
tests/: test_cli.py  test_gemini_query.py
